Adding flatlaf library references

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,9 +29,11 @@ dist.jar=${dist.dir}/GameOfLife.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.flatlaf-1.0.jar=/Users/angel_p11/Documents/Java Helpers/flatlaf-1.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.flatlaf-1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
