--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.flatlaf-1.0.jar=/Users/angel_p11/Documents/Java Helpers/flatlaf-1
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.flatlaf-1.0.jar}
+    ${file.reference.flatlaf-1.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
